2001-11-24  Per Bothner  <per@bothner.com>

	* MakeElement.java (beginGroup, endGroup):  Switch argument order.
	(inline):  Use Expressions's setLine to set line number info.

	* NamedChildren.java (compile):  Also optimize ConsumerTarget.
	(getPropertyName, getNamedProperty):  New methods.
	(namedChildren, getNamaedChild, gotoNext, gotoFirstChild):  Add
	support for getting named properties from beans e.g. $request/method.
	* NodeType.java (coerce):  Handle arbitrary value.

2001-11-18  Per Bothner  <per@bothner.com>

	* Document.java (document, apply1): Specific that it throws Throwable,
	thus we no longer have to wrap exceptions.

	* AppendValues.java (compile):  Use compileWithPosition.

2001-11-12  Per Bothner  <per@bothner.com>

	* Document.java (document):  Filter through NamespaceResolver.
	
	* NamedChildren.java (namedChildren):  Use getNamedChild method.

	* MakeElement.java:  Also implement CanInline.
	(inline):  New method.

	* MakeElement.am (beginGroup, endGroup):  New helper methods.
	(apply):  Use new methods.
	(compile):  Call new methods.	
	* MakeAttribute.java (beginAttribute):  New helper method.
	(numArgs):  Now takes any number of arguments.
	(apply):  Use new helper method; handle any number of arguments.
	(compile):  Similarly.

2001-11-06  Per Bothner  <per@bothner.com>

	* StringValue.java:  Various fixes to actually make it work.
	(string):  New static, to match function name "string".

	* ValuesFilter.java (matches):  Handle multiple values better.
	(apply):  Inceement count *before* calling matches.

	* XMLFormat.java:  Update as XMLPrinter now takes a Consumer.

	* Compare.java:  New class, extends Procedure2.
	* Makefile.am (java_sources):  Add Compare.java.

2001-11-01  Per Bothner  <per@bothner.com>

	* ValuesFilter.java:  New class, extends CpsProcedure.
	* Makefile.am (java_sources):  Added ValuesFilter.java.

	* NamedChildren.java (compile):  If namespaceURI and localName are
	constant, don't recompile them to a variable.
